--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
 dependencies:
   badges: ^3.1.2
   bloc: ^8.1.4
+  code_text_field: ^1.1.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_code_editor: ^0.3.2
   flutter_custom_clippers: ^2.1.0
   google_fonts: ^6.2.1
 
@@ -34,3 +36,7 @@ flutter:
     - assets/icons/myic1.png
     - assets/profile.png
     - assets/sliverPro.jpg
+    - assets/bottomAppBar/FRAME.png
+    - assets/text/text.png
+    - assets/bottomAppBar/appbar.png
+    - assets/bottomAppBar/scaffold.png
